# botFm

./: .gitignore  .gitignore.txt  2978.txt  4294.docx  4294.txt  4738.txt  README.md  Untitled.ipynb  main.py  pyproject.toml  test.pcapng  test2.pcapng  testout.cap
src/: utils.py
src/deserializer/: exchange_craft_results.py
src/message/: app_message.py  message.py
src/protocol/: fm_results.py
src/socket/: buffer.py
tests/message/: test_parse_messages.py
